fixed issue causing huge gap at the bottom

--- a/src/components/FilmCard.module.scss
+++ b/src/components/FilmCard.module.scss
@@ -100,7 +100,7 @@
     cursor: pointer;
     transition: all 300ms ease;
     p {
-      opacity: 0;
+      display: none;
     }
     &.tabClicked {
       display: flex;
@@ -111,12 +111,12 @@
       border-radius: 20px;
       overflow-y: auto;
       p {
+        display: flex;
         padding: 1.5rem;
         color: white;
         text-shadow: 0 0 10px rgba(0, 0, 0, .75);
         animation: fadeIn 400ms;
         animation-fill-mode: forwards;
-        animation-delay: 250ms;
       }
     }
   }
